--- a/events/logicloom2/speakers.html
+++ b/events/logicloom2/speakers.html
@@ -160,7 +160,7 @@ border-radius:5px;
             </div>
 </div>
   
-               <center><p>Our Guiding Lights: <b><font color="#f82249;">Mentors!</font></b></p></center>
+               <!--<center><p>Our Guiding Lights: <b><font color="#f82249;">Mentors!</font></b></p></center>
 
         <div class="flex items-center justify-center flex-wrap gap-4 p-4">
       <div class="card">
@@ -175,7 +175,7 @@ border-radius:5px;
                 <div class="text-purple-600" style="text-align: center;">Teaching Fellow<br>DS, IIT Madras</div>
                 <p class="text-blue-600" style="text-align: justify;font-size: 12px;">Piyush Sir is working as the course instructor for Computational Thinking, DBMS, Privacy and Security in Online Social Media at the IITM BS in Data Science programme. He's a Google and Microsoft-Learn certified educator in the AI-ML domain and also a proud IITM alumnus. <a href="javascript:void(0)" id="read-more-link-3" style="color:red;">[Read more ...]</a><span id="hidden-content-3" class="hidden-content-3">He's a valued mentor and well-wisher of our event, offering guidance and support to our initiatives.</span></p>
             </div>
-       </div>
+       </div>-->
       
       </div>
     </section>  
