--- a/archives.html
+++ b/archives.html
@@ -108,6 +108,11 @@
                         </a>
                       </li>
                       <li class="ud-submenu-item">
+                        <a href="/logicloom4/" class="ud-submenu-link">
+                          LogicLooM 4.0 (JUNE 2025)
+                        </a>
+                      </li>
+                      <li class="ud-submenu-item">
                         <a href="/ml/events/mlc/" class="ud-submenu-link">
                           ML Challenge 1.0, 2.0
                         </a>
@@ -157,6 +162,19 @@
             <div class="ud-about-content" style="max-width:100%;">
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
               <div class="video-grid">
+                <div class="video-item">
+                            <h3>LogicLooM 4.0 - Talk on LLMs in EdTech (PARADOX-25) by Dr. JK Madathil, Sr scientist, NPTEL</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HDgeaAcoxmA?si=xO3CvJ4bNorKR9Oe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               </div>
+                <div class="video-item">
+                            <h3>LogicLooM 4.0 - Talk on Indic LLMs (PARADOX-25) by Mr. Arun Prakash, AI4Bharat-IITM</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yQrcWhDSI4A?si=geqCZnG_2X8dlGJo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               </div>
+                <div class="video-item">
+                            <h3>LogicLooM 4.0 - Talk on Combinatorial Games (PARADOX-25) by Prof. Jyothi Krishnan, IITGN</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tfHOWvEA-cg?si=_4hGr-wcmIVuJujX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               </div>
+                
                 <div class="video-item">
                             <h3>LogicLooM 3.0 - Workshop on LLMs (Margazhi'25) by Mr. S Anand, CEO, Gramener</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sK7R5y0uWXM?si=MOfU6u-6E4qxCqaN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -300,7 +318,7 @@
           <div class="row">
             <div class="col-md-8">
               <ul class="ud-footer-bottom-left">
-                &copy; Wayanad House ML-Series Team
+                &copy; Wayanad House 2023-24 ML-Series (WHALE) Team
                 <!--<li>
                   <a href="javascript:void(0)"></a>
                 </li>-->
