--- a/archives.html
+++ b/archives.html
@@ -205,8 +205,8 @@
                 <div class="video-item"><h3>PAN-BS AI-ML Challenge Finale (Winner announcement & System Showcase)</h3> 
                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MCmgfA7kQkg?si=6lmiJFiD5CL6ZsTx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-                <div class="video-item"><h3>Comprehensive Approach to the Challenge Problem Statements by Mentors</h3> 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/O0vGP10IhUk?si=HAk9p6SFFScnLjMx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-item"><h3>Comprehensive Approach to the Challenge Problem Statements</h3> 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/5WcNNrh-3F4?si=yGDHFVdnFuX-6u3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
                 <div class="video-item"><h3>Orientation Session - ML Challenge 2.0 (Shravan edition)</h3> 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/_4UxKPnBqLA?si=rCa1OJAyAu07JJrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
