--- a/archives.html
+++ b/archives.html
@@ -294,7 +294,7 @@
                     <a href="archives">Video Archives</a>
                   </li>
                   <li>
-                    <a href="gallery">Gallery</a>
+                    <a href="https://wayanadiitm.github.io/gallery">Gallery</a>
                   </li>
                 </ul>
               </div>
