--- a/gallery.html
+++ b/gallery.html
@@ -236,6 +236,12 @@
     <!-- ====== Hero End ====== -->
 
     <section id="about" class="ud-about">
+
+          <div class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700 p-4 mx-4 my-4 rounded-md" role="alert">
+    <p class="font-semibold">Note:</p>
+    <p>The repository was last maintained in Nov 2024. Starting from 2025, we are uploading the archival data to <a href="/gallery">https://wayanadiitm.github.io/gallery</a>.</p>
+  </div>
+
       <div class="container">
         <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
           <div class="ud-about-content-wrapper">
