--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,7 @@
 <link rel="stylesheet" href="/ml/assets/css/ud-styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
  <style>
    .gallery {
     display: flex;
