--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script>
     window.onload = function () {
-      window.location.replace("https://wayanadiitm.github.io/aimlgrp");
+      window.location.replace("https://mlseries.42web.io");
     };
   </script>
 </head>
