--- a/404.html
+++ b/404.html
@@ -1,61 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>ML Series - Wayanad House</title>
-<meta name="title" content="ML Series - Wayanad House">
-<meta name="description" content="Welcome to Wayanad House">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://wayanadiitm.github.io/ml/">
-<meta property="og:title" content="ML Series - Wayanad House">
-<meta property="og:description" content="ML Series is an initiative by the Wayanad House">
-<meta property="og:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://wayanadiitm.github.io/ml/">
-<meta property="twitter:title" content="ML Series - Wayanad House">
-<meta property="twitter:description" content="ML Series is an initiative by the Wayanad House">
-<meta property="twitter:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
-<link rel="shortcut icon" href="/ml/assets/images/favicon.png" type="image/png"/>
-    <link rel="stylesheet" href="/ml/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/ml/assets/css/animate.css" />
-    <link rel="stylesheet" href="/ml/assets/css/lineicons.css" />
-    <link rel="stylesheet" href="/ml/assets/css/ud-styles.css" />
-  </head>
-  <body>
-    
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wayanad House Archives</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <meta name="description" content="404 - Page Not Found | ML Series - Wayanad House" />
+  <meta property="og:title" content="404 - Page Not Found | ML Series - Wayanad House" />
+  <meta property="og:description" content="ML Series is an initiative by Wayanad House" />
+    <link rel="icon" href="/23logo.png" type="image/png">
+</head>
+<body class="bg-gray-100 text-gray-800 flex items-center justify-center min-h-screen px-4">
 
-    <!-- ====== Error 404 Start ====== -->
-    <section class="ud-404">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-404-wrapper">
-              <div class="ud-404-content">
-                <h2 class="ud-404-title">Oops! Seems you've lost your way</h2>
-                <h5 class="ud-404-subtitle">
-                  Maybe you can find what you need here?
-                </h5>
-                <ul class="ud-404-links">
-                  <li>
-                    <a href="/ml">Home Page</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== Error 404 End ====== -->
+  <div class="text-center max-w-md mx-auto" data-aos="fade-up">
+    <img src="https://cdn-icons-png.flaticon.com/128/14005/14005559.png" alt="404 Illustration" class="mx-auto mb-8">
+    <h1 class="text-4xl md:text-5xl font-bold mb-4">Oops! Page not found</h1>
+    <p class="text-lg text-gray-600 mb-6">
+      The page you're looking for doesn't exist in "Wayanad House 2024 archives" or has been moved. <a href="mailto:wayanad24team@googlegroups.com
+" target="_blank"><u>Reach out to them</u></a> OR
+    </p>
+    <a href="/ml" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">
+      Go Back to ML Series Home
+    </a>
+  </div>
 
-    
-
-
-    <!-- ====== All Javascript Files ====== -->
-    <script src="/ml/assets/js/bootstrap.bundle.min.js"></script>
-    <script src="/ml/assets/js/wow.min.js"></script>
-    <script src="/ml/assets/js/main.js"></script>
-  </body>
+  <script>
+    AOS.init();
+  </script>
+</body>
 </html>
