--- a/events/pysprint.html
+++ b/events/pysprint.html
@@ -68,9 +68,9 @@
 
         <div class="row align-items-center mb-5">
           <div class="col-lg-12 mb-4 mb-lg-0">
-            <h1 class="hero-title mb-4">AI-ML, Reimagined.</h1>
+            <h1 class="hero-title mb-4">Python for Beginners</h1>
 
-            <p class="hero-description mb-4">Curious about Machine Learning? Start your journey with us. Explore ML the fun way.</p>
+            <p class="hero-description mb-4">Learn Python programming the fun way.</p>
 
             <div class="cta-wrapper">
               <a href="#about" class="btn btn-primary">Know More</a>
