--- a/events/pysprint.html
+++ b/events/pysprint.html
@@ -262,7 +262,7 @@
       <p>&copy; 2023-25 ML series team, All Rights Reserved</p>
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>, Logo credit: flaticon.com<br><br>
-        Note: This portal is hosted solely for the benefit of the student community, and the institute does not endorse or assume responsibility for the content, products, or services provided here. The ML Series team will be responsible for any issues, if any, after using this site. By accessing this site, you by-default agree to all TnCs.
+        Note: This portal is hosted solely for the benefit of the student community, and the institute does not endorse or assume responsibility for the content, products, or services provided here. The ML Series team will NOT be responsible for any issues, if any, after using this site. By accessing this site, you by-default agree to all TnCs.
       </div>
     </div>
 
