--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Pythonic Sprint - ML Series</title>
+  <title>ML Data Challenge - ML Series</title>
   <meta name="description" content="Welcome to Wayanad House AI-ML Interest Group">
-  <meta name="keywords" content="python,council24,wayanad house,iitmbs,online">
+  <meta name="keywords" content="ai,ml,nlp,data challenge,council24,wayanad house,iitmbs,online">
   <link href="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" rel="icon">
   <link href="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" rel="apple-touch-icon">
 
@@ -108,7 +108,7 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Challenging Tracks</h2>
+        <h2>Challenging Tracks 🌟</h2>
         <p></p>
       </div><!-- End Section Title -->
 
@@ -118,6 +118,8 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="100">
             <div class="service-item">
+                      <img src="img/track1.jpg" class="img-fluid mb-3" alt="Fake News Detection">
+
               <div class="service-icon">
                 <i class="bi bi-code-slash"></i>
               </div>
@@ -135,6 +137,8 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
             <div class="service-item">
+                        <img src="img/track2.PNG" class="img-fluid mb-3" alt="AI text Detection">
+
               <div class="service-icon">
                 <i class="bi bi-code-slash"></i>
               </div>
@@ -156,6 +160,145 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 
     </section><!-- /Services Section -->
 
+ <!-- Faq Section -->
+    <section id="faq" class="faq section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-5">
+          <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="200">
+            <div class="faq-contact-card">
+              <div class="card-icon">
+                <i class="bi bi-question-circle"></i>
+              </div>
+              <div class="card-content">
+                <h3>Still Have Questions?</h3>
+                <p>Feel free to contact.</p>
+                <div class="contact-options">
+                  <a href="mailto:wayanad-ml@ds.study.iitm.ac.in" target="_blank" class="contact-option">
+                    <i class="bi bi-envelope"></i>
+                    <span>wayanad-ml@ds.study.iitm.ac.in</span>
+                  </a>
+                  <a href="https://chat.whatsapp.com/BJybzruXqvODRgeSw9DZUV" target="_blank" class="contact-option">
+                    <i class="bi bi-chat-dots"></i>
+                    <span>Discussion Space</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="faq-accordion">
+              
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#1</strong> I'm from Wayanad, but I'd like to team up with my friend who's from Gir.</p>
+    <p><i class="lni lni-reply"></i> Of course, it's perfectly fine for a team to include members from different houses.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#2</strong> I've already registered a few days ago as an individual participant. Now I wish to team up with another student who has the same issue as mine. What should I do?</p>
+    <p><i class="lni lni-reply"></i> <strong>Please re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> with the updated team member details.</strong> Either of you can submit. Our automated scripts will detect such cases and both of your previous responses will be discarded after processing. You will be issued one team ID.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#3</strong> Will the organizers create the teams?</p>
+    <p><i class="lni lni-reply"></i> With around 700 IITM BS students present in our LogicLooM and ML Challenge groups (combined), we encourage you to form teams through discussions and by sharing your skills with each other. Collaboration is an important aspect of these events, so we highly recommend working together if possible.</p>
+    <p>However, if you're unable to find a team-mate, register 'solo'. <strong>Once registration closes and the data is processed, we will pair solo registrants into teams according to the following priority rules:</strong></p>
+    <ul>
+      <li><strong>Batch Similarity:</strong> We will prioritize pairing students from the same or adjacent batches.</li>
+      <li><strong>Track Preference:</strong> We will ensure that team members are assigned to the same track they selected during registration.</li>
+    </ul>
+    <p><strong>All participants will receive a confirmation auto-mail from 'no-reply wayanad' regarding the team allocation details and team ID.</strong></p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#4</strong> What if I registered solo because I want to participate individually, rather than because I couldn't find a teammate?</p>
+    <p><i class="lni lni-reply"></i> <strong>We understand that some participants may prefer to compete individually.</strong> If you possess the necessary skills (proficiency in Python and ML/NLP), please complete the <a href="https://forms.gle/HThDbun5qaDnF7oq9" target="_blank">Request Form</a>. Note that this form is for requesting individual participation and is not the registration form; you should have already submitted your registration form beforehand.</p>
+    <p>If you meet the criteria outlined in the Request Form, your request will be approved, and <strong>you will be excluded from the team allocation process.</strong></p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#5</strong> I've already registered my '2 member' team, but now wish to add the 3rd participant. Am I allowed to make changes?</p>
+    <p><i class="lni lni-reply"></i> You can't edit the previous response. Please re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> freshly with the updated team member details. Last response will be considered.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#6</strong> Our team opted for the AI-Generated Text detection task. Can we modify our track as well?</p>
+    <p><i class="lni lni-reply"></i> Yes, re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> freshly with the updated track choice. Any changes are possible until the deadline.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#7</strong> I'm a fresher and not aware of ML. Should I participate?</p>
+    <p><i class="lni lni-reply"></i> You need not worry if you're just starting out and don't have a technical or coding background. We’re providing you with easy-to-understand resources and a detailed roadmap to help you get familiar with Python first.</p>
+    <p><strong>Our goal isn’t for you to master these intricate aspects right away, but rather to gain a solid understanding of the basics and how ML works.</strong> This will be a fantastic hands-on opportunity & learning experience. Give it a try. Learn, join our sessions and enjoy the challenge :)</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#8</strong> Can a team participate in both the tasks?</p>
+    <p><i class="lni lni-reply"></i> No, one team can only opt for one track.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#9</strong> I was registered by my team-mate in Team A, but now I wish to change my team and join Team B. What should I do?</p>
+    <p><i class="lni lni-reply"></i> <strong>A participant can only be a part of ONE team.</strong> Please submit or ask one of your new team-mates to re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> with the updated team details.</p>
+    <p>You must inform your previous team members regarding your decision to leave their team as one of them needs to re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> with their new structure (excluding you). Else, all participants from such teams will be desk-rejected from participating in the challenge.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#10</strong> One of my team members and I both filled out the form with the same team details. Will this lead to disqualification?</p>
+    <p><i class="lni lni-reply"></i> Don't worry. We have an automated process to detect such cases. Irrespective of the multiple responses, you both will be allotted the same team ID.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#11</strong> Are pre-trained fine-tuned models allowed?</p>
+    <p><i class="lni lni-reply"></i> Yes.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#12</strong> Is there some restriction in the libraries/models we can use?</p>
+    <p><i class="lni lni-reply"></i> Yes, there are specific restrictions for each track. You'll get complete clarity on 5th August 2024 when we release the detailed problem statements with the task-specific rules and resources.</p>
+  </div>
+</div>
+
+<div class="faq-item">
+  <div class="faq-content">
+    <p><i class="lni lni-question-circle"></i> <strong>#13</strong> Will there be any sessions to clarify doubts regarding the challenge?</p>
+    <p><i class="lni lni-reply"></i> Yes, there will be a discussion session with registered teams on 6th August to address any doubts regarding the challenge. Additionally, two more mentor assistance sessions will be hosted, which should help the teams during the training and development phase.</p>
+  </div>
+</div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /Faq Section -->
+    
     <!-- guests Section -->
     <section id="guests" class="team section light-background">
 
