--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -118,7 +118,7 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 
           <div class="col-md-6" data-aos="fade-right" data-aos-delay="100">
             <div class="service-item">
-                      <img src="img/track1.jpg" class="img-fluid mb-3" alt="Fake News Detection">
+                      <!--<img src="img/track1.jpg" class="img-fluid mb-3" alt="Fake News Detection">-->
 
               <div class="service-icon">
                 <i class="bi bi-code-slash"></i>
@@ -137,7 +137,7 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 
           <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
             <div class="service-item">
-                        <img src="img/track2.PNG" class="img-fluid mb-3" alt="AI text Detection">
+                        <!--<img src="img/track2.PNG" class="img-fluid mb-3" alt="AI text Detection">-->
 
               <div class="service-icon">
                 <i class="bi bi-code-slash"></i>
@@ -352,7 +352,7 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
           <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
             <div class="team-card">
               <div class="team-image">
-                <img src="" class="img-fluid" alt="">
+                <img src="/ml/events/logicloom2/storage/piyushsir2.PNG" class="img-fluid" alt="">
                 <div class="team-overlay">
                   <p>Piyush sir is a course instructor in the IITM BS Program.</p>
                   <div class="team-social">
