--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -163,9 +163,10 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
     <section id="schedule" class="schedule section-bg">
   <div class="container" data-aos="fade-up">
 
-    <div class="section-header">
-      <h2>Schedule</h2>
-    </div>
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Schedule</h2>
+      </div><!-- End Section Title -->
 
     <div class="row gy-5">
 
@@ -386,9 +387,10 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 <section id="rules" class="rules section-bg">
   <div class="container" data-aos="fade-up">
 
-    <div class="section-header">
-      <h2>Rules</h2>
-    </div>
+     <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Rules & Guidelines</h2>
+      </div><!-- End Section Title -->
 
     <div class="row">
       <div class="col-lg-12">
@@ -407,9 +409,9 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
         </div>
         <ul>
           <li><strong>Participation certificate:</strong> Provided to all team members who submit a solution & complete the challenge.</li>
-          <li><strong>Honourable Mention:</strong> Given to teams ranked 4th–10th on the leaderboard after the contest ends.</li>
-          <li><strong>Certificate of Appreciation:</strong> Awarded to the top 3 teams.</li>
-          <li><strong>Certificate of Achievement:</strong> Awarded to teams that surpass the benchmark scores.</li>
+          <li><strong>Honourable Mention*:</strong> Given to teams ranked 4th–10th on the leaderboard after the contest ends.</li>
+          <li><strong>Certificate of Appreciation*:</strong> Awarded to the top 3 teams.</li>
+          <li><strong>Certificate of Achievement*:</strong> Awarded to teams that surpass the benchmark scores.</li>
         </ul>
         <p><em>*Certificates will be signed by the Head, Student Affairs.</em></p>
 
@@ -601,14 +603,15 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
     <section id="results" class="results section">
   <div class="container" data-aos="fade-up">
 
-    <div class="section-header text-center">
-      <h2>Results</h2>
-      <p class="mb-4">Top Leaderboard</p>
+    <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Top Leaderboard</h2>
 
       <!-- Filter Buttons -->
       <div class="btn-group mb-4" role="group" aria-label="Track Filter">
-        <button type="button" class="btn btn-outline-primary active" id="track2Btn">Track 2</button>
         <button type="button" class="btn btn-outline-primary" id="track1Btn">Track 1</button>
+        <button type="button" class="btn btn-outline-primary active" id="track2Btn">Track 2</button>
+        <button type="button" class="btn btn-outline-primary" id="track3Btn">Track 3</button>
       </div>
     </div>
 
@@ -625,9 +628,12 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
           </tr>
         </thead>
         <tbody>
+          <tr><td>- (From 2.0 re-run)</td><td>Meikanda Sivam Sivakumar</td><td>0.979</td><td>-</td></tr>
           <tr><td>T22104</td><td>Sai Ruthvik, Shankha Subhra Saha</td><td>0.963</td><td>0.986</td></tr>
           <tr><td>T22082</td><td>Parashmani Datta, Athish Sivakumaran</td><td>0.956</td><td>0.983</td></tr>
           <tr><td>T12173</td><td>Darshan Kumar</td><td>0.951</td><td>0.983</td></tr>
+          <tr><td>- (From 2.0 re-run)</td><td>Krish Gupta</td><td>0.948</td><td>-</td></tr>
+          <tr><td>- (From 2.0 re-run)</td><td>Lakshya Patel, Soham Katlariwala</td><td>0.944</td><td>-</td></tr>
           <tr><td>T32019</td><td>Saminathan C, Vanchit Visanth M S, Sahishnuram S</td><td>0.922</td><td>0.969</td></tr>
           <tr><td>T22121</td><td>Siddharth Roy, Sarfraz Ahmed</td><td>0.892</td><td>0.954</td></tr>
           <tr><td>T22094</td><td>Gaurav Singh, Sakshi</td><td>0.863</td><td>0.950</td></tr>
@@ -637,6 +643,24 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
           <tr><td>T22103</td><td>Saravanan K, Stuti Bahuguna</td><td>0.783</td><td>0.886</td></tr>
           <tr><td>T22029</td><td>Arka Dash, Nimish Shinde</td><td>0.713</td><td>0.820</td></tr>
           <tr><td>T32007</td><td>Manaswita Mandal, Debapriyo Saha</td><td>0.697</td><td>0.805</td></tr>
+        </tbody>
+      </table>
+    </div>
+
+     <!-- Track 3 Results Table -->
+    <div id="track3Table" class="table-responsive d-none">
+      <h4 class="mb-3">Track 3 (MLC 2.0) – Top Teams</h4>
+      <table class="table table-bordered table-hover align-middle text-center">
+        <thead class="table-light">
+          <tr>
+            <th>Participants</th>
+            <th>Acc.</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>Karthik Agrawal</td><td>0.95</td></tr>
+          <tr><td>Ripunjay Kumar, Aakashdeep Srivastava, Harsh Singh/td><td>0.86</td></tr>
+          <tr><td>Serah Santiago, Priyanshu Sharma</td><td>0.82</td></tr>
         </tbody>
       </table>
     </div>
@@ -655,6 +679,7 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
         </thead>
         <tbody>
           <tr><td>T11017</td><td>Kartik Agrawal</td><td>0.419</td><td>0.765</td></tr>
+          <tr><td>- (From 2.0 re-run)</td><td>JS Karthik</td><td>0.418</td><td>-</td></tr>
           <tr><td>T21154</td><td>Keshari Nath Chaudhary, Pratiksha Naik</td><td>0.405</td><td>0.871</td></tr>
           <tr><td>T21166</td><td>Shaikh Gufran Jabbar, Sukanya S</td><td>0.400</td><td>0.841</td></tr>
           <tr><td>T11006</td><td>Nitish Rishi</td><td>0.364</td><td>0.803</td></tr>
@@ -670,22 +695,36 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
 <script>
   const track1Btn = document.getElementById('track1Btn');
   const track2Btn = document.getElementById('track2Btn');
+  const track3Btn = document.getElementById('track3Btn');
+
   const track1Table = document.getElementById('track1Table');
   const track2Table = document.getElementById('track2Table');
+  const track3Table = document.getElementById('track3Table');
 
-  track1Btn.addEventListener('click', () => {
-    track1Table.classList.remove('d-none');
-    track2Table.classList.add('d-none');
-    track1Btn.classList.add('active');
-    track2Btn.classList.remove('active');
-  });
-
-  track2Btn.addEventListener('click', () => {
-    track2Table.classList.remove('d-none');
+  function showTrack(track) {
     track1Table.classList.add('d-none');
-    track2Btn.classList.add('active');
+    track2Table.classList.add('d-none');
+    track3Table.classList.add('d-none');
+
     track1Btn.classList.remove('active');
-  });
+    track2Btn.classList.remove('active');
+    track3Btn.classList.remove('active');
+
+    if (track === 1) {
+      track1Table.classList.remove('d-none');
+      track1Btn.classList.add('active');
+    } else if (track === 2) {
+      track2Table.classList.remove('d-none');
+      track2Btn.classList.add('active');
+    } else if (track === 3) {
+      track3Table.classList.remove('d-none');
+      track3Btn.classList.add('active');
+    }
+  }
+
+  track1Btn.addEventListener('click', () => showTrack(1));
+  track2Btn.addEventListener('click', () => showTrack(2));
+  track3Btn.addEventListener('click', () => showTrack(3));
 </script>
 
     
