--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -477,7 +477,7 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
                 <div class="team-overlay">
                   <p>Piyush sir is a course instructor in the IITM BS Program.</p>
                   <div class="team-social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://in.linkedin.com/in/piyush-wairale-13a2b478" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -491,16 +491,16 @@ Join us in an exhilarating exploration at the frontier of artificial intelligenc
           <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-card">
               <div class="team-image">
-                <img src="" class="img-fluid" alt="">
+                <img src="img/kothaimam.png" class="img-fluid" alt="">
                 <div class="team-overlay">
                   <p>Ms. Kothai heads the Student Affairs of the IITM BS Programs.</p>
                   <div class="team-social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href="https://in.linkedin.com/in/kothai-s-krishnamoorthy-89936516" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
               <div class="team-content">
-                <h4>Ms. Kothainayaki SK</h4>
+                <h4>Ms. Kothai SK</h4>
                 <span class="position">Guest</span>
               </div>
             </div>
